[gd_scene load_steps=9 format=2]

[ext_resource path="res://Globos/Globos.gd" type="Script" id=1]
[ext_resource path="res://4.png" type="Texture" id=2]
[ext_resource path="res://baloon.png" type="Texture" id=3]
[ext_resource path="res://1.png" type="Texture" id=4]
[ext_resource path="res://2.png" type="Texture" id=5]
[ext_resource path="res://3.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 36.9665, 74 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Globos" type="Area2D"]
position = Vector2( 407.292, -61.3245 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Collition_globo1" type="CollisionShape2D" parent="."]
position = Vector2( 75.9988, 391.66 )
shape = SubResource( 1 )

[node name="Collition_globo3" type="CollisionShape2D" parent="."]
position = Vector2( 371.777, 443.333 )
shape = SubResource( 1 )

[node name="Collition_globo2" type="CollisionShape2D" parent="."]
position = Vector2( -225.125, 450.46 )
shape = SubResource( 1 )

[node name="globo_globo1" type="AnimatedSprite" parent="."]
position = Vector2( 75.3592, 377.609 )
scale = Vector2( 0.640625, 0.691406 )
frames = SubResource( 2 )

[node name="globo_globo3" type="AnimatedSprite" parent="."]
position = Vector2( 372.919, 431.063 )
scale = Vector2( 0.640625, 0.691406 )
frames = SubResource( 2 )

[node name="globo_globo2" type="AnimatedSprite" parent="."]
position = Vector2( -222.201, 436.408 )
scale = Vector2( 0.640625, 0.691406 )
frames = SubResource( 2 )

[node name="life_time" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[connection signal="timeout" from="life_time" to="." method="_life_time_globos"]
